# arsoft-base

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  arsoft-base.kdev4  etc_default_arsoft-scripts
apt/: CMakeLists.txt  Makefile  apt-cleanup  apt-key-import  apt-list-obsolete  apt-proxy  apt-purge-removed  apt-repo  dpkg-info
bash/: Makefile  bash.bashrc
bind/: CMakeLists.txt  Makefile  dns-update  vizone
cert/: CMakeLists.txt  Makefile  certinfo  nss-import-cert
cert/arsoft/: CMakeLists.txt  Makefile  root_ca.pem  root_ca_com.pem  root_ca_com_1.pem  ssl_ca_com.pem
cert/fastprotect/: .gitignore  CMakeLists.txt  Makefile  fastprotect_root_ca.pem  fastprotect_root_ca_sha256.pem  fastprotect_ssl_ca.pem  fastprotect_ssl_ca_sha256.pem
cron.daily/: CMakeLists.txt  Makefile  arsoft-base-repos  clean-old-bootcharts
cyrusimapd/: CMakeLists.txt  Makefile  cyrusimap-backup
debian/: .gitignore  arsoft-apt-source.install  arsoft-apt-source.postinst  arsoft-base-bin.install  arsoft-base-bin.lintian-overrides  arsoft-base.init  arsoft-base.install  arsoft-base.lintian-overrides  arsoft-base.postinst  arsoft-base.prerm  arsoft-dhcp-client.install  arsoft-dhcp-client.lintian-overrides  arsoft-dhcp-client.postinst  arsoft-dhcp-client.prerm  arsoft-nagios-agent.install  arsoft-nagios-plugins.install  arsoft-openvpn.install  arsoft-pbuilder.install  arsoft-pbuilder.lintian-overrides  arsoft-pnp4nagios.install  arsoft-ppa.install  arsoft-ppa.postinst  arsoft-scm.install  arsoft-scm.lintian-overrides  arsoft-scripts-cyrusimapd.install  arsoft-scripts-cyrusimapd.lintian-overrides  arsoft-scripts-mythtv.install  arsoft-scripts-svn.install  arsoft-vim.install  arsoft-vim.lintian-overrides  arsoft-vim.postinst  arsoft-vim.prerm  changelog  control  copyright  nagios-notifications.install  nagios-plugins-arsoft.install  rules
desktop/: CMakeLists.txt  Makefile  kernel-messages-notify  kernel-messages-notify.desktop  xpid
devel/: CMakeLists.txt  Makefile  gdb-add-index  git-branch-diff  ppa_copy  ppa_publish
dhcp/: CMakeLists.txt  Makefile  apt  arsoft-dhcp-client-enter  arsoft-dhcp-client-exit  cups  default  dhclient-script.lucid  dhclient-script.oneiric  dhclient-script.precise  heimdal  ldap  master-script  nameserver-dhcp-client  network  nm-dispatch  ntp  postfix  puppet
dhcp/exit.d/: 00-network  05-ldap  apt  cups  heimdal  ldap  network  ntp  postfix  puppet  timezone
docker/: CMakeLists.txt  dsh  dvcp
kernel/: Makefile  kmesg
keyrings/: CMakeLists.txt  ppa-aroth.gpg  puppetlabs-pc1-keyring.gpg  puppetlabs.gpg
krb5/: CMakeLists.txt  akt.cpp  krb5_wrapper.cpp  krb5_wrapper.h  opts_helper.cpp  opts_helper.h
ldap/: CMakeLists.txt  Makefile  autofs-ldap-auth  nsswitch-ldap  schema2ldif  slapd-backup  slapd-clean-db  slapd-debug  slapd-online-config
mythtv/: Makefile  mythadder.py  mythtv-restart  mythtv-startx-tty  mythtv-webradio
nagios/: CMakeLists.txt  Makefile  apt_upgrade.cfg  check_apt_upgrade  check_fritzbox  check_jenkins.pl  check_jenkins_job_time.pl  check_jenkins_slaves.pl  check_jenkins_version.pl  check_lm_sensors  check_nagiostats  check_ntp_configured_peer  check_openvz_ubc.pl  check_ps  check_puppet_agent  check_puppetdb_memory  check_rkhunter  check_smb  check_spamassassin_bayes  check_spamd.pl  check_ssl_cert  check_system_user_disk  dhcp-remote.cfg  fritzbox.cfg  icinga_mail.pl  jenkins.cfg  lm_sensors.cfg  lm_sensors_ext.cfg  nagiostats.cfg  nma.pl  nma_notify.cfg  ntpex.cfg  openvz.cfg  ps.cfg  puppet.cfg  smb.cfg  spamassassin.cfg  ssl_cert.cfg  system_user_disk.cfg  test-icinga-mail.sh
network/: CMakeLists.txt  Makefile  find-snmp-devices  lo-down-script  lo-up-script
nfs/: CMakeLists.txt  Makefile  nfs-control
openvpn/: CMakeLists.txt  Makefile  openvpn-status  openvpn-zip-config
pam/: CMakeLists.txt  Makefile  mkhomedir
pbuilder/: CMakeLists.txt  Makefile  pbuildmgr
pbuilder/hook/: A99lang  B09lintian  B10autopkgtest  B10list-missing  D09custompool  D11unsafeio  D12aptupgrade  D20icecc  G01distro-updates  README  _D99nocompression
pnp4nagios/: CMakeLists.txt  Makefile
pnp4nagios/templates/: check_ps.php  check_weather.php
postfix/: CMakeLists.txt  Makefile  postfix-delete  postfix-flush-queue  postfix-ldap  postfix-mailstat  postfix-queue-rm  postfix-sendmail  postfix-update-maps
puppet/: CMakeLists.txt  Makefile  puppet-clean-ssl  puppet-function-check  puppet-node  puppet-template-check
scm/: CMakeLists.txt  Makefile  git-deep-clone  git-info  git-shrink  git-subdir2submodule  imagediff  mimediff  oodiff  svn2git  svn2git.rb  trac-svn2git  zipdiff
scm/lib/svn2git/: migration.rb
shell/: CMakeLists.txt  Makefile  bash.bashrc  cp_p  profile
shlib/: args.sh  backup.sh  disk.sh  etcbackup  ldapbackup  logging.sh  script.tmpl  shlib.sh  simple_backup  sshcopy  svnbackup  tracbackup
spamassassin/: CMakeLists.txt  Makefile  salearn_imap
ssh/: CMakeLists.txt  Makefile  ssh-nogss  ssh-nopubkey  ssh-setup-keys  sshsudo
svn/: Makefile  imagediff  mimediff  svn2git  zipdiff
sysinfo/: CMakeLists.txt  Makefile  biosinfo  motherboardinfo  pmem  system-info-check
tftp/: CMakeLists.txt  Makefile  tftp-update-installers  update-installer.sh
trac/: CMakeLists.txt  trac-admin-suid.c  trac-backup
vim/: Makefile  vimrc
wine/: CMakeLists.txt  Makefile  wine-rebuild-menu
